--- a/home.html
+++ b/home.html
@@ -77,6 +77,14 @@
 
             <div class="crews">
                 <h1> MEET OUR CREWS </h1>
+                <p>
+                    Lorem ipsum dolor sit amet,Lorem ipsum dolor sit amet, amet,Lorem i  <br />
+                    Lorem ipsum dolor sit amet,Lorem ipsu amet,Lorem i amet,Lorem i
+                </p>
+
+                <div class="crew-sheet-music-container">
+
+                </div>
             </div>
         </div>
 
