--- a/home.html
+++ b/home.html
@@ -83,9 +83,67 @@
                 </p>
 
                 <div class="crew-sheet-music-container">
+                    
+                    <div class="sheet-music-line-long"></div>
+                    <div class="sheet-music-line-long"></div>
+                    <div class="sheet-music-line-long"></div>
+                    <div class="sheet-music-line-long"></div>
+                    <div class="sheet-music-line-long"></div>
 
+                    <div class="spacer">
+                        <button class="crew-button">dance1</button>
+                        <button class="crew-button">dance1</button>
+                        <button class="crew-button">dance1</button>
+                        <button class="crew-button">dance1</button>
+                        <button class="crew-button">dance1</button>
+                    </div>
+
+                    <div class="sheet-music-line-long"></div>
+                    <div class="sheet-music-line-long"></div>
+                    <div class="sheet-music-line-long"></div>
+                    <div class="sheet-music-line-long"></div>
+                    <div class="sheet-music-line-long"></div>
+
+                    <div class="spacer">
+                        <button class="crew-button">tech1</button>
+                        <button class="crew-button">tech1</button>
+                        <button class="crew-button">tech1</button>
+                        <button class="crew-button">tech1</button>
+                        <button class="crew-button">tech1</button>
+                    </div>
+
+                    <div class="sheet-music-line-long"></div>
+                    <div class="sheet-music-line-long"></div>
+                    <div class="sheet-music-line-long"></div>
+                    <div class="sheet-music-line-long"></div>
+                    <div class="sheet-music-line-long"></div>
+
+                    <div class="spacer">
+                        <button class="crew-button">art1</button>
+                        <button class="crew-button">art1</button>
+                        <button class="crew-button">art1</button>
+                        <button class="crew-button">art1</button>
+                        <button class="crew-button">art1</button>
+                    </div>
+
+                    <div class="sheet-music-line-long"></div>
+                    <div class="sheet-music-line-long"></div>
+                    <div class="sheet-music-line-long"></div>
+                    <div class="sheet-music-line-long"></div>
+                    <div class="sheet-music-line-long"></div>
+
+                    <div class="spacer">
+                        <button class="crew-button">stage1</button>
+                        <button class="crew-button">stage1</button>
+                        <button class="crew-button">stage1</button>
+                        <button class="crew-button">stage1</button>
+                        <button class="crew-button">stage1</button>
+                    </div>
                 </div>
             </div>
+        </div>
+        <div class="slant-2 diagonal">
+
         </div>
 
     </body>
