fixed mobile reflow

--- a/home.html
+++ b/home.html
@@ -5,8 +5,8 @@
         <link rel="stylesheet" type="text/css" href="side-bar.css">
         <link href="https://fonts.googleapis.com/css?family=Crimson+Text|Work+Sans&display=swap" rel="stylesheet">
         <script src="smooth-scroll-16.1.2/dist/smooth-scroll.min.js"></script>
+        <meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1.0">
     </head> 
-    
     <body>
         <div class="top">
             <div class="other-slant other-diagonal">
