--- a/home.html
+++ b/home.html
@@ -5,6 +5,7 @@
         <link rel="stylesheet" type="text/css" href="side-bar.css">
         <link href="https://fonts.googleapis.com/css?family=Crimson+Text|Work+Sans&display=swap" rel="stylesheet">
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+        <script src="scripts.js"></script> 
         <script>
             $(document).ready(function(){
               // Add smooth scrolling to all links
@@ -37,10 +38,14 @@
         <div class="top">
             <div class="other-slant other-diagonal">
                 <div class="sheet-music-container">
-                    <div class="sheet-music-line-long"></div>
-                    <div class="sheet-music-line-long"></div>
-
                     <img src="assets/treble.png" class="treble">
+                    <img src="assets/sharp.png" class="sharp">
+                    <div class="vertical-line-1"></div>
+                    <div class="vertical-line-2"></div>
+                    <div class="vertical-line-3"></div>
+
+                    <div class="sheet-music-line-long"></div>
+                    <div class="sheet-music-line-long"></div>
 
                     <div class="sheet-music-line-short"></div>
                     <button class="sheet-music-button">
@@ -83,7 +88,7 @@
             
         </div>
         <div class="slant diagonal">
-            <div class="about">
+            <div class="about" id="monster">
                 <h1>WHAT IS SING?</h1>
                 <p>
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit <br />
@@ -92,7 +97,7 @@
                 </p>
             </div>
             
-            <div class="trailer">
+            <div class="trailer hideme">
                 <h1><a id="trailertarget">TRAILER </a> </h1>
                 <p>
                     Lorem ipsum dolor sit amet,Lorem ipsum dolor sit amet,  <br />
@@ -103,7 +108,7 @@
                 </div>
             </div>
 
-            <div class="crews">
+            <div class="crews hideme">
                 <h1> MEET OUR CREWS </h1>
                 <p>
                     Lorem ipsum dolor sit amet,Lorem ipsum dolor sit amet, amet,Lorem i  <br />
