--- a/home.html
+++ b/home.html
@@ -96,6 +96,15 @@
                     Mauris blandit velit diam, ac lacinia leo lobortis sit amet <br />
                 </p>
             </div>
+
+            <div class="divider">
+                <div class="separator-left"></div>
+                <div class="circle-container">   <div class="circle"></div>  </div>
+                <div class="diamond-container">  <div class="diamond"></div> </div>
+                <div class="circle-container">   <div class="circle"></div>  </div>
+                <div class="separator-right"></div>
+            </div>
+
             <div class="trailer ">
                 <h1><a id="trailertarget">TRAILER </a> </h1>
                 <p>
@@ -105,10 +114,17 @@
                 <div class="trailer-container">
                     
                 </div>
-            </div>
+            </div>            
         </div>
         <div class="slant diagonal">
-
+            
+            <div class="divider-2">
+                <div class="separator-left"></div>
+                <div class="circle-container">   <div class="circle"></div>  </div>
+                <div class="diamond-container">  <div class="diamond"></div> </div>
+                <div class="circle-container">   <div class="circle"></div>  </div>
+                <div class="separator-right"></div>
+            </div>
             <div class="crews ">
                 <h1> MEET OUR CREWS </h1>
                 <p>
@@ -176,7 +192,7 @@
                 </div>
             </div>
         </div>
-        <div class="slant-2 diagonal">
+        <div class="bottom-slant bottom-diagonal">
 
         </div>
         <script>
